--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
       </div></footer>
   <section class="u-align-center u-black u-clearfix u-container-style u-dialog-block u-opacity u-opacity-70 u-valign-middle-lg u-valign-middle-xl u-dialog-section-11" id="sec-1cfb" >
       <div class="overflow scroll u-align-center u-container-style u-dialog u-image u-shape-rectangle u-image-1" data-image-width="1024" data-image-height="600">
-        <div class="u-container-layout u-valign-bottom-xl u-container-layout-1">
+        <div class="u-container-layout u-valign-bottom-xl u-container-layout-1" style="overflow: scroll;">
           <div class="u-container-style u-expanded-width u-group u-shape-rectangle u-group-1">
             <div class="u-container-layout">
               <h3 class="u-custom-font u-font-playfair-display u-text u-text-palette-2-base u-text-1">Bienvenida a Secret.CO</h3>
